tests/compilation_test_sources/struct_violates_send_sync_rc_requires_send_sync.stderr
error[E0277]: `std::rc::Rc<i32>` cannot be shared between threads safely
 --> $DIR/struct_violates_send_sync_rc_requires_send_sync.rs:8:1
  |
8 | #[must_implement_trait(Send, Sync)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::rc::Rc<i32>` cannot be shared between threads safely
  |
  = help: within `MySendSyncStruct`, the trait `std::marker::Sync` is not implemented for `std::rc::Rc<i32>`
  = note: required because it appears within the type `MySendSyncStruct`
  = help: see issue #48214
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::rc::Rc<i32>` cannot be sent between threads safely
 --> $DIR/struct_violates_send_sync_rc_requires_send_sync.rs:8:1
  |
8 | #[must_implement_trait(Send, Sync)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::rc::Rc<i32>` cannot be sent between threads safely
  |
  = help: within `MySendSyncStruct`, the trait `std::marker::Send` is not implemented for `std::rc::Rc<i32>`
  = note: required because it appears within the type `MySendSyncStruct`
  = help: see issue #48214
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
