tests/compilation_test_sources/struct_violates_send_sync_rc_requires_send_sync.rs
use std::rc::Rc;
use must_implement_trait::must_implement_trait;

fn main() {
    let _instance = MySendSyncStruct { value: 7 };
}

#[must_implement_trait(Send, Sync)]
struct MySendSyncStruct {
    value: Rc<i32>
}